# ragPaper

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.example.json  paper_metadata.example.json  pyproject.toml
skills/rag-paper-query/: SKILL.md
src/rag_paper/: chunking.py  citation_graph.py  cli.py  config.py  dedup.py  embeddings.py  enrichment.py  enrichment_cache.py  indexer.py  inspection.py  logging.py  manifest.py  mcp_server.py  metadata.py  models.py  pdf.py  reranker.py  retrieval.py  store.py  title_quality.py
tests/: test_dedup_and_graph.py  test_display.py  test_enrichment.py  test_enrichment_cache.py  test_indexing_config.py  test_inspection.py
